userspace/parser.c
/*
 * parser.c - ktap parser
 *
 * Copyright (C) 2012-2013 Jovi Zhang
 *
 * Author: Jovi Zhang <bookjovi@gmail.com>
 *         zhangwei(Jovi) <jovi.zhangwei@huawei.com>
 *
 * This program is free software; you can redistribute it and/or modify it
 * under the terms and conditions of the GNU General Public License,
 * version 2, as published by the Free Software Foundation.
 *
 * This program is distributed in the hope it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
 * more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin St - Fifth Floor, Boston, MA 02110-1301 USA.
 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#include "../ktap_types.h"
#include "../ktap_opcodes.h"
#include "ktapc.h"


/* maximum number of local variables per function (must be smaller
   than 250, due to the bytecode format) */
#define MAXVARS		200

#define hasmultret(k)		((k) == VCALL || (k) == VVARARG)


/*
 * nodes for block list (list of active blocks)
 */
typedef struct BlockCnt {
	struct BlockCnt *previous;  /* chain */
	short firstlabel;  /* index of first label in this block */
	short firstgoto;  /* index of first pending goto in this block */
	u8 nactvar;  /* # active locals outside the block */
	u8 upval;  /* true if some variable in the block is an upvalue */
	 u8 isloop;  /* true if `block' is a loop */
} BlockCnt;


/*
** prototypes for recursive non-terminal functions
*/
static void statement (LexState *ls);
static void expr (LexState *ls, expdesc *v);


static void anchor_token(LexState *ls)
{
	/* last token from outer function must be EOS */
	ktap_assert((int)(ls->fs != NULL) || ls->t.token == TK_EOS);
	if (ls->t.token == TK_NAME || ls->t.token == TK_STRING) {
		Tstring *ts = ls->t.seminfo.ts;
		lex_newstring(ls, getstr(ts), ts->tsv.len);
	}
}


/* semantic error */
static void semerror(LexState *ls, const char *msg)
{
	ls->t.token = 0;  /* remove 'near to' from final message */
	lex_syntaxerror(ls, msg);
}


static void error_expected(LexState *ls, int token)
{
	lex_syntaxerror(ls,
		ktapc_sprintf("%s expected", lex_token2str(ls, token)));
}


static void errorlimit(FuncState *fs, int limit, const char *what)
{
	const char *msg;
	int line = fs->f->linedefined;
	const char *where = (line == 0) ? "main function"
				: ktapc_sprintf("function at line %d", line);

	msg = ktapc_sprintf("too many %s (limit is %d) in %s",
				what, limit, where);
	lex_syntaxerror(fs->ls, msg);
}


static void checklimit(FuncState *fs, int v, int l, const char *what)
{
	if (v > l)
		errorlimit(fs, l, what);
}


static int testnext(LexState *ls, int c)
{
	if (ls->t.token == c) {
		lex_next(ls);
		return 1;
	}
	else
		return 0;
}


static void check (LexState *ls, int c)
{
	if (ls->t.token != c)
		error_expected(ls, c);
}


static void checknext (LexState *ls, int c)
{
	check(ls, c);
	lex_next(ls);
}


#define check_condition(ls,c,msg)	{ if (!(c)) lex_syntaxerror(ls, msg); }



static void check_match(LexState *ls, int what, int who, int where)
{
	if (!testnext(ls, what)) {
		if (where == ls->linenumber)
			error_expected(ls, what);
		else {
			lex_syntaxerror(ls, ktapc_sprintf(
					"%s expected (to close %s at line %d)",
					lex_token2str(ls, what),
					lex_token2str(ls, who), where));
		}
	}
}


static Tstring *str_checkname(LexState *ls)
{
	Tstring *ts;

	check(ls, TK_NAME);
	ts = ls->t.seminfo.ts;
	lex_next(ls);
	return ts;
}


static void init_exp(expdesc *e, expkind k, int i)
{
	e->f = e->t = NO_JUMP;
	e->k = k;
	e->u.info = i;
}


static void codestring (LexState *ls, expdesc *e, Tstring *s)
{
	init_exp(e, VK, codegen_stringK(ls->fs, s));
}


static void checkname(LexState *ls, expdesc *e)
{
	codestring(ls, e, str_checkname(ls));
}


static int registerlocalvar(LexState *ls, Tstring *varname)
{
	FuncState *fs = ls->fs;
	Proto *f = fs->f;
	int oldsize = f->sizelocvars;

	ktapc_growvector(f->locvars, fs->nlocvars, f->sizelocvars,
			 LocVar, SHRT_MAX, "local variables");

	while (oldsize < f->sizelocvars)
		f->locvars[oldsize++].varname = NULL;

	f->locvars[fs->nlocvars].varname = varname;
	return fs->nlocvars++;
}


static void new_localvar(LexState *ls, Tstring *name)
{
	FuncState *fs = ls->fs;
	Dyndata *dyd = ls->dyd;
	int reg = registerlocalvar(ls, name);

	checklimit(fs, dyd->actvar.n + 1 - fs->firstlocal,
		   MAXVARS, "local variables");
	ktapc_growvector(dyd->actvar.arr, dyd->actvar.n + 1,
			 dyd->actvar.size, Vardesc, MAX_INT, "local variables");
	dyd->actvar.arr[dyd->actvar.n++].idx = (short)reg;
}


static void new_localvarliteral_(LexState *ls, const char *name, size_t sz)
{
	new_localvar(ls, lex_newstring(ls, name, sz));
}

#define new_localvarliteral(ls,v) \
	new_localvarliteral_(ls, "" v, (sizeof(v)/sizeof(char))-1)


static LocVar *getlocvar(FuncState *fs, int i)
{
	int idx = fs->ls->dyd->actvar.arr[fs->firstlocal + i].idx;

	ktap_assert(idx < fs->nlocvars);
	return &fs->f->locvars[idx];
}


static void adjustlocalvars(LexState *ls, int nvars)
{
	FuncState *fs = ls->fs;

	fs->nactvar = (u8)(fs->nactvar + nvars);
	for (; nvars; nvars--) {
		getlocvar(fs, fs->nactvar - nvars)->startpc = fs->pc;
	}
}


static void removevars(FuncState *fs, int tolevel)
{
	fs->ls->dyd->actvar.n -= (fs->nactvar - tolevel);

	while (fs->nactvar > tolevel)
		getlocvar(fs, --fs->nactvar)->endpc = fs->pc;
}


static int searchupvalue(FuncState *fs, Tstring *name)
{
	int i;
	Upvaldesc *up = fs->f->upvalues;

	for (i = 0; i < fs->nups; i++) {
		if (ktapc_ts_eqstr(up[i].name, name))
			return i;
	}
	return -1;  /* not found */
}


static int newupvalue(FuncState *fs, Tstring *name, expdesc *v)
{
	Proto *f = fs->f;
	int oldsize = f->sizeupvalues;

	checklimit(fs, fs->nups + 1, MAXUPVAL, "upvalues");
	ktapc_growvector(f->upvalues, fs->nups, f->sizeupvalues,
			 Upvaldesc, MAXUPVAL, "upvalues");

	while (oldsize < f->sizeupvalues)
		f->upvalues[oldsize++].name = NULL;
	f->upvalues[fs->nups].instack = (v->k == VLOCAL);
	f->upvalues[fs->nups].idx = (u8)(v->u.info);
	f->upvalues[fs->nups].name = name;
	return fs->nups++;
}


static int searchvar(FuncState *fs, Tstring *n)
{
	int i;

	for (i = fs->nactvar-1; i >= 0; i--) {
		if (ktapc_ts_eqstr(n, getlocvar(fs, i)->varname))
			return i;
	}
	return -1;  /* not found */
}


/*
  Mark block where variable at given level was defined
  (to emit close instructions later).
*/
static void markupval (FuncState *fs, int level)
{
	BlockCnt *bl = fs->bl;

	while (bl->nactvar > level)
		bl = bl->previous;
	bl->upval = 1;
}


/*
  Find variable with given name 'n'. If it is an upvalue, add this
  upvalue into all intermediate functions.
*/
static int singlevaraux(FuncState *fs, Tstring *n, expdesc *var, int base)
{
	if (fs == NULL)  /* no more levels? */
		return VVOID;  /* default is global */
	else {
		int v = searchvar(fs, n);  /* look up locals at current level */
		if (v >= 0) {  /* found? */
			init_exp(var, VLOCAL, v);  /* variable is local */
			if (!base)
				markupval(fs, v);  /* local will be used as an upval */
			return VLOCAL;
		} else {  /* not found as local at current level; try upvalues */
			int idx = searchupvalue(fs, n);  /* try existing upvalues */
			if (idx < 0) {  /* not found? */
				if (singlevaraux(fs->prev, n, var, 0) == VVOID) /* try upper levels */
					return VVOID;  /* not found; is a global */
				/* else was LOCAL or UPVAL */
				idx  = newupvalue(fs, n, var);  /* will be a new upvalue */
			}
			init_exp(var, VUPVAL, idx);
			return VUPVAL;
		}
	}
}


static void singlevar(LexState *ls, expdesc *var)
{
	Tstring *varname = str_checkname(ls);
	FuncState *fs = ls->fs;

	if (singlevaraux(fs, varname, var, 1) == VVOID) {  /* global name? */
		expdesc key;
		singlevaraux(fs, ls->envn, var, 1);  /* get environment variable */
		ktap_assert(var->k == VLOCAL || var->k == VUPVAL);
		codestring(ls, &key, varname);  /* key is variable name */
		codegen_indexed(fs, var, &key);  /* env[varname] */
	}
}


static void adjust_assign(LexState *ls, int nvars, int nexps, expdesc *e)
{
	FuncState *fs = ls->fs;
	int extra = nvars - nexps;

	if (hasmultret(e->k)) {
		extra++;  /* includes call itself */
		if (extra < 0)
			extra = 0;
		codegen_setreturns(fs, e, extra);  /* last exp. provides the difference */
		if (extra > 1)
			codegen_reserveregs(fs, extra-1);
	} else {
		if (e->k != VVOID)
			codegen_exp2nextreg(fs, e);  /* close last expression */
		if (extra > 0) {
			int reg = fs->freereg;

			codegen_reserveregs(fs, extra);
			codegen_nil(fs, reg, extra);
		}
	}
}


static void enterlevel(LexState *ls)
{
	++ls->nCcalls;
	checklimit(ls->fs, ls->nCcalls, KTAP_MAXCCALLS, "C levels");
}


#define leavelevel(ls)	(ls->nCcalls--)


static void closegoto(LexState *ls, int g, Labeldesc *label)
{
	int i;
	FuncState *fs = ls->fs;
	Labellist *gl = &ls->dyd->gt;
	Labeldesc *gt = &gl->arr[g];

	ktap_assert(ktapc_ts_eqstr(gt->name, label->name));
	if (gt->nactvar < label->nactvar) {
		Tstring *vname = getlocvar(fs, gt->nactvar)->varname;
		const char *msg = ktapc_sprintf(
			"<goto %s> at line %d jumps into the scope of local " KTAP_QS,
			getstr(gt->name), gt->line, getstr(vname));
		semerror(ls, msg);
	}

	codegen_patchlist(fs, gt->pc, label->pc);
	/* remove goto from pending list */
	for (i = g; i < gl->n - 1; i++)
		gl->arr[i] = gl->arr[i + 1];
	gl->n--;
}


/*
** try to close a goto with existing labels; this solves backward jumps
*/
static int findlabel(LexState *ls, int g)
{
	int i;
	BlockCnt *bl = ls->fs->bl;
	Dyndata *dyd = ls->dyd;
	Labeldesc *gt = &dyd->gt.arr[g];

	/* check labels in current block for a match */
	for (i = bl->firstlabel; i < dyd->label.n; i++) {
		Labeldesc *lb = &dyd->label.arr[i];
		if (ktapc_ts_eqstr(lb->name, gt->name)) {  /* correct label? */
			if (gt->nactvar > lb->nactvar &&
				(bl->upval || dyd->label.n > bl->firstlabel))
				codegen_patchclose(ls->fs, gt->pc, lb->nactvar);
			closegoto(ls, g, lb);  /* close it */
			return 1;
		}
	}
	return 0;  /* label not found; cannot close goto */
}


static int newlabelentry(LexState *ls, Labellist *l, Tstring *name,
			 int line, int pc)
{
	int n = l->n;

	ktapc_growvector(l->arr, n, l->size,
			 Labeldesc, SHRT_MAX, "labels/gotos");
	l->arr[n].name = name;
	l->arr[n].line = line;
	l->arr[n].nactvar = ls->fs->nactvar;
	l->arr[n].pc = pc;
	l->n++;
	return n;
}


/*
** check whether new label 'lb' matches any pending gotos in current
** block; solves forward jumps
*/
static void findgotos (LexState *ls, Labeldesc *lb)
{
	Labellist *gl = &ls->dyd->gt;
	int i = ls->fs->bl->firstgoto;

	while (i < gl->n) {
		if (ktapc_ts_eqstr(gl->arr[i].name, lb->name))
			closegoto(ls, i, lb);
		else
			i++;
	}
}


/*
** "export" pending gotos to outer level, to check them against
** outer labels; if the block being exited has upvalues, and
** the goto exits the scope of any variable (which can be the
** upvalue), close those variables being exited.
*/
static void movegotosout (FuncState *fs, BlockCnt *bl)
{
	int i = bl->firstgoto;
	Labellist *gl = &fs->ls->dyd->gt;

	/* correct pending gotos to current block and try to close it
		with visible labels */
	while (i < gl->n) {
		Labeldesc *gt = &gl->arr[i];

		if (gt->nactvar > bl->nactvar) {
			if (bl->upval)
				codegen_patchclose(fs, gt->pc, bl->nactvar);
			gt->nactvar = bl->nactvar;
		}
		if (!findlabel(fs->ls, i))
			i++;  /* move to next one */
	}
}


static void enterblock(FuncState *fs, BlockCnt *bl, u8 isloop)
{
	bl->isloop = isloop;
	bl->nactvar = fs->nactvar;
	bl->firstlabel = fs->ls->dyd->label.n;
	bl->firstgoto = fs->ls->dyd->gt.n;
	bl->upval = 0;
	bl->previous = fs->bl;
	fs->bl = bl;
	ktap_assert(fs->freereg == fs->nactvar);
}


/*
** create a label named "break" to resolve break statements
*/
static void breaklabel(LexState *ls)
{
	Tstring *n = ktapc_ts_new("break");
	int l = newlabelentry(ls, &ls->dyd->label, n, 0, ls->fs->pc);

	findgotos(ls, &ls->dyd->label.arr[l]);
}

/*
** generates an error for an undefined 'goto'; choose appropriate
** message when label name is a reserved word (which can only be 'break')
*/
static void undefgoto(LexState *ls, Labeldesc *gt)
{
	const char *msg = isreserved(gt->name)
			? "<%s> at line %d not inside a loop"
			: "no visible label " KTAP_QS " for <goto> at line %d";

	msg = ktapc_sprintf(msg, getstr(gt->name), gt->line);
	semerror(ls, msg);
}


static void leaveblock (FuncState *fs)
{
	BlockCnt *bl = fs->bl;
	LexState *ls = fs->ls;
	if (bl->previous && bl->upval) {
		/* create a 'jump to here' to close upvalues */
		int j = codegen_jump(fs);

		codegen_patchclose(fs, j, bl->nactvar);
		codegen_patchtohere(fs, j);
	}

	if (bl->isloop)
		breaklabel(ls);  /* close pending breaks */

	fs->bl = bl->previous;
	removevars(fs, bl->nactvar);
	ktap_assert(bl->nactvar == fs->nactvar);
	fs->freereg = fs->nactvar;  /* free registers */
	ls->dyd->label.n = bl->firstlabel;  /* remove local labels */
	if (bl->previous)  /* inner block? */
		movegotosout(fs, bl);  /* update pending gotos to outer block */
	else if (bl->firstgoto < ls->dyd->gt.n)  /* pending gotos in outer block? */
		undefgoto(ls, &ls->dyd->gt.arr[bl->firstgoto]);  /* error */
}


/*
** adds a new prototype into list of prototypes
*/
static Proto *addprototype(LexState *ls)
{
	Proto *clp;
	FuncState *fs = ls->fs;
	Proto *f = fs->f;  /* prototype of current function */

	if (fs->np >= f->sizep) {
		int oldsize = f->sizep;
		ktapc_growvector(f->p, fs->np, f->sizep, Proto *, MAXARG_Bx, "functions");
		while (oldsize < f->sizep)
			f->p[oldsize++] = NULL;
	}
	f->p[fs->np++] = clp = ktapc_newproto();
	return clp;
}


/*
** codes instruction to create new closure in parent function
*/
static void codeclosure (LexState *ls, expdesc *v)
{
	FuncState *fs = ls->fs->prev;
	init_exp(v, VRELOCABLE, codegen_codeABx(fs, OP_CLOSURE, 0, fs->np - 1));
	codegen_exp2nextreg(fs, v);  /* fix it at stack top (for GC) */
}


static void open_func(LexState *ls, FuncState *fs, BlockCnt *bl)
{
	Proto *f;

	fs->prev = ls->fs;  /* linked list of funcstates */
	fs->ls = ls;
	ls->fs = fs;
	fs->pc = 0;
	fs->lasttarget = 0;
	fs->jpc = NO_JUMP;
	fs->freereg = 0;
	fs->nk = 0;
	fs->np = 0;
	fs->nups = 0;
	fs->nlocvars = 0;
	fs->nactvar = 0;
	fs->firstlocal = ls->dyd->actvar.n;
	fs->bl = NULL;
	f = fs->f;
	f->source = ls->source;
	f->maxstacksize = 2;  /* registers 0/1 are always valid */
	fs->h = ktapc_table_new();
	//table_resize(NULL, fs->h, 32, 32);
	enterblock(fs, bl, 0);
}


static void close_func(LexState *ls)
{
	FuncState *fs = ls->fs;
	Proto *f = fs->f;

	codegen_ret(fs, 0, 0);  /* final return */
	leaveblock(fs);
	ktapc_reallocvector(f->code, f->sizecode, fs->pc, Instruction);
	f->sizecode = fs->pc;
	ktapc_reallocvector(f->lineinfo, f->sizelineinfo, fs->pc, int);
	f->sizelineinfo = fs->pc;
	ktapc_reallocvector(f->k, f->sizek, fs->nk, Tvalue);
	f->sizek = fs->nk;
	ktapc_reallocvector(f->p, f->sizep, fs->np, Proto *);
	f->sizep = fs->np;
	ktapc_reallocvector(f->locvars, f->sizelocvars, fs->nlocvars, LocVar);
	f->sizelocvars = fs->nlocvars;
	ktapc_reallocvector(f->upvalues, f->sizeupvalues, fs->nups, Upvaldesc);
	f->sizeupvalues = fs->nups;
	ktap_assert((int)(fs->bl == NULL));
	ls->fs = fs->prev;
	/* last token read was anchored in defunct function; must re-anchor it */
	anchor_token(ls);
}



/*============================================================*/
/* GRAMMAR RULES */
/*============================================================*/


/*
** check whether current token is in the follow set of a block.
** 'until' closes syntactical blocks, but do not close scope,
** so it handled in separate.
*/
static int block_follow (LexState *ls, int withuntil)
{
	switch (ls->t.token) {
	case TK_ELSE: case TK_ELSEIF:
	case TK_END: case TK_EOS:
		return 1;
	case TK_UNTIL:
		return withuntil;
	case '}':
		return 1;
	default:
		return 0;
	}
}


static void statlist(LexState *ls)
{
	/* statlist -> { stat [`;'] } */
	while (!block_follow(ls, 1)) {
		if (ls->t.token == TK_RETURN) {
			statement(ls);
			return;  /* 'return' must be last statement */
		}
		statement(ls);
	}
}


static void fieldsel(LexState *ls, expdesc *v)
{
	/* fieldsel -> ['.' | ':'] NAME */
	FuncState *fs = ls->fs;
	expdesc key;

	codegen_exp2anyregup(fs, v);
	lex_next(ls);  /* skip the dot or colon */
	checkname(ls, &key);
	codegen_indexed(fs, v, &key);
}


static void yindex(LexState *ls, expdesc *v)
{
	/* index -> '[' expr ']' */
	lex_next(ls);  /* skip the '[' */
	expr(ls, v);
	codegen_exp2val(ls->fs, v);
	checknext(ls, ']');
}


/*
** {======================================================================
** Rules for Constructors
** =======================================================================
*/


struct ConsControl {
	expdesc v;  /* last list item read */
	expdesc *t;  /* table descriptor */
	int nh;  /* total number of `record' elements */
	int na;  /* total number of array elements */
	int tostore;  /* number of array elements pending to be stored */
};


static void recfield (LexState *ls, struct ConsControl *cc)
{
	/* recfield -> (NAME | `['exp1`]') = exp1 */
	FuncState *fs = ls->fs;
	int reg = ls->fs->freereg;
	expdesc key, val;
	int rkkey;

	if (ls->t.token == TK_NAME) {
		checklimit(fs, cc->nh, MAX_INT, "items in a constructor");
		checkname(ls, &key);
	} else  /* ls->t.token == '[' */
		yindex(ls, &key);

	cc->nh++;
  	checknext(ls, '=');
	rkkey = codegen_exp2RK(fs, &key);
	expr(ls, &val);
	codegen_codeABC(fs, OP_SETTABLE, cc->t->u.info, rkkey, codegen_exp2RK(fs, &val));
	fs->freereg = reg;  /* free registers */
}


static void closelistfield(FuncState *fs, struct ConsControl *cc)
{
	if (cc->v.k == VVOID)
		return;  /* there is no list item */
  	codegen_exp2nextreg(fs, &cc->v);
	cc->v.k = VVOID;
	if (cc->tostore == LFIELDS_PER_FLUSH) {
		codegen_setlist(fs, cc->t->u.info, cc->na, cc->tostore);  /* flush */
		cc->tostore = 0;  /* no more items pending */
	}
}


static void lastlistfield(FuncState *fs, struct ConsControl *cc)
{
	if (cc->tostore == 0)
		return;

	if (hasmultret(cc->v.k)) {
		codegen_setmultret(fs, &cc->v);
		codegen_setlist(fs, cc->t->u.info, cc->na, KTAP_MULTRET);
		cc->na--;  /* do not count last expression (unknown number of elements) */
	} else {
		if (cc->v.k != VVOID)
			codegen_exp2nextreg(fs, &cc->v);
		codegen_setlist(fs, cc->t->u.info, cc->na, cc->tostore);
	}
}


static void listfield(LexState *ls, struct ConsControl *cc)
{
	/* listfield -> exp */
	expr(ls, &cc->v);
	checklimit(ls->fs, cc->na, MAX_INT, "items in a constructor");
	cc->na++;
	cc->tostore++;
}


static void field (LexState *ls, struct ConsControl *cc)
{
	/* field -> listfield | recfield */
	switch(ls->t.token) {
	case TK_NAME: {  /* may be 'listfield' or 'recfield' */
		if (lex_lookahead(ls) != '=')  /* expression? */
			listfield(ls, cc);
		else
			recfield(ls, cc);
		break;
	}
	case '[': {
		recfield(ls, cc);
		break;
	}
	default:
		listfield(ls, cc);
		break;
	}
}


static void constructor (LexState *ls, expdesc *t)
{
	/* constructor -> '{' [ field { sep field } [sep] ] '}'
		sep -> ',' | ';' */
	FuncState *fs = ls->fs;
	int line = ls->linenumber;
	int pc = codegen_codeABC(fs, OP_NEWTABLE, 0, 0, 0);
	struct ConsControl cc;

	cc.na = cc.nh = cc.tostore = 0;
	cc.t = t;
	init_exp(t, VRELOCABLE, pc);
	init_exp(&cc.v, VVOID, 0);  /* no value (yet) */
	codegen_exp2nextreg(ls->fs, t);  /* fix it at stack top */
	checknext(ls, '{');
	do {
		ktap_assert(cc.v.k == VVOID || cc.tostore > 0);
		if (ls->t.token == '}')
			break;
		closelistfield(fs, &cc);
		field(ls, &cc);
	} while (testnext(ls, ',') || testnext(ls, ';'));
	check_match(ls, '}', '{', line);
	lastlistfield(fs, &cc);
	SETARG_B(fs->f->code[pc], ktapc_int2fb(cc.na)); /* set initial array size */
	SETARG_C(fs->f->code[pc], ktapc_int2fb(cc.nh));  /* set initial table size */
}

/* }====================================================================== */



static void parlist (LexState *ls)
{
	/* parlist -> [ param { `,' param } ] */
	FuncState *fs = ls->fs;
	Proto *f = fs->f;
	int nparams = 0;
	f->is_vararg = 0;

	if (ls->t.token != ')') {  /* is `parlist' not empty? */
		do {
			switch (ls->t.token) {
			case TK_NAME: {  /* param -> NAME */
				new_localvar(ls, str_checkname(ls));
				nparams++;
				break;
			}
			case TK_DOTS: {  /* param -> `...' */
				lex_next(ls);
				f->is_vararg = 1;
				break;
			}
			default:
				lex_syntaxerror(ls, "<name> or " KTAP_QL("...") " expected");
			}
		} while (!f->is_vararg && testnext(ls, ','));
	}
	adjustlocalvars(ls, nparams);
	f->numparams = (u8)(fs->nactvar);
	codegen_reserveregs(fs, fs->nactvar);  /* reserve register for parameters */
}


static void body (LexState *ls, expdesc *e, int ismethod, int line)
{
	/* body ->  `(' parlist `)' block END */
	FuncState new_fs;
	BlockCnt bl;

	new_fs.f = addprototype(ls);
	new_fs.f->linedefined = line;
	open_func(ls, &new_fs, &bl);
	checknext(ls, '(');
	if (ismethod) {
		new_localvarliteral(ls, "self");  /* create 'self' parameter */
		adjustlocalvars(ls, 1);
	}
	parlist(ls);
	checknext(ls, ')');
	checknext(ls, '{');
	statlist(ls);
	new_fs.f->lastlinedefined = ls->linenumber;
	checknext(ls, '}');
	//check_match(ls, TK_END, TK_FUNCTION, line);
	codeclosure(ls, e);
	close_func(ls);
}


static int explist (LexState *ls, expdesc *v)
{
	/* explist -> expr { `,' expr } */
	int n = 1;  /* at least one expression */

	expr(ls, v);
	while (testnext(ls, ',')) {
		codegen_exp2nextreg(ls->fs, v);
		expr(ls, v);
		n++;
	}
	return n;
}


static void funcargs(LexState *ls, expdesc *f, int line)
{
	FuncState *fs = ls->fs;
	expdesc args;
	int base, nparams;

	switch (ls->t.token) {
	case '(': {  /* funcargs -> `(' [ explist ] `)' */
		lex_next(ls);
		if (ls->t.token == ')')  /* arg list is empty? */
			args.k = VVOID;
		else {
			explist(ls, &args);
			codegen_setmultret(fs, &args);
		}
		check_match(ls, ')', '(', line);
		break;
	}
	case '{': {  /* funcargs -> constructor */
		constructor(ls, &args);
		break;
	}
	case TK_STRING: {  /* funcargs -> STRING */
		codestring(ls, &args, ls->t.seminfo.ts);
		lex_next(ls);  /* must use `seminfo' before `next' */
		break;
	}
	default: {
		lex_syntaxerror(ls, "function arguments expected");
	}
	}
	ktap_assert(f->k == VNONRELOC);
	base = f->u.info;  /* base register for call */
	if (hasmultret(args.k))
		nparams = KTAP_MULTRET;  /* open call */
	else {
		if (args.k != VVOID)
			codegen_exp2nextreg(fs, &args);  /* close last argument */
		nparams = fs->freereg - (base+1);
	}
	init_exp(f, VCALL, codegen_codeABC(fs, OP_CALL, base, nparams+1, 2));
	codegen_fixline(fs, line);
	fs->freereg = base+1;  /* call remove function and arguments and leaves
				(unless changed) one result */
}




/*
** {======================================================================
** Expression parsing
** =======================================================================
*/


static void primaryexp(LexState *ls, expdesc *v)
{
	/* primaryexp -> NAME | '(' expr ')' */
	switch (ls->t.token) {
	case '(': {
		int line = ls->linenumber;

		lex_next(ls);
		expr(ls, v);
		check_match(ls, ')', '(', line);
		codegen_dischargevars(ls->fs, v);
		return;
	}
	case TK_NAME:
		singlevar(ls, v);
		return;
	default:
		lex_syntaxerror(ls, "unexpected symbol");
	}
}


static void suffixedexp(LexState *ls, expdesc *v)
{
	/* suffixedexp ->
		primaryexp { '.' NAME | '[' exp ']' | ':' NAME funcargs | funcargs } */
	FuncState *fs = ls->fs;
	int line = ls->linenumber;

	primaryexp(ls, v);
	for (;;) {
		switch (ls->t.token) {
		case '.': {  /* fieldsel */
			fieldsel(ls, v);
			break;
		}
		case '[': {  /* `[' exp1 `]' */
			expdesc key;
			codegen_exp2anyregup(fs, v);
			yindex(ls, &key);
			codegen_indexed(fs, v, &key);
			break;
		}
		case ':': {  /* `:' NAME funcargs */
			expdesc key;
			lex_next(ls);
			checkname(ls, &key);
			codegen_self(fs, v, &key);
			funcargs(ls, v, line);
			break;
		}
		case '(': case TK_STRING: case '{': {  /* funcargs */
			codegen_exp2nextreg(fs, v);
			funcargs(ls, v, line);
			break;
		}
		default:
			return;
		}
	}
}


static void simpleexp(LexState *ls, expdesc *v)
{
	/* simpleexp -> NUMBER | STRING | NIL | TRUE | FALSE | ... |
		constructor | FUNCTION body | suffixedexp */
	switch (ls->t.token) {
	case TK_NUMBER: {
		init_exp(v, VKNUM, 0);
		v->u.nval = ls->t.seminfo.r;
		break;
	}
	case TK_STRING: {
		codestring(ls, v, ls->t.seminfo.ts);
		break;
	}
	case TK_NIL: {
		init_exp(v, VNIL, 0);
		break;
	}
	case TK_TRUE: {
		init_exp(v, VTRUE, 0);
		break;
	}
	case TK_FALSE: {
		init_exp(v, VFALSE, 0);
		break;
	}
	case TK_DOTS: {  /* vararg */
		FuncState *fs = ls->fs;
		check_condition(ls, fs->f->is_vararg,
                      "cannot use " KTAP_QL("...") " outside a vararg function");
		init_exp(v, VVARARG, codegen_codeABC(fs, OP_VARARG, 0, 1, 0));
		break;
	}
	case '{': {  /* constructor */
		constructor(ls, v);
		return;
	}
	case TK_FUNCTION: {
		lex_next(ls);
		body(ls, v, 0, ls->linenumber);
		return;
	}
	default: {
		suffixedexp(ls, v);
		return;
	}
	}
	lex_next(ls);
}


static UnOpr getunopr(int op)
{
	switch (op) {
	case TK_NOT: return OPR_NOT;
	case '-': return OPR_MINUS;
	case '#': return OPR_LEN;
	default: return OPR_NOUNOPR;
	}
}


static BinOpr getbinopr(int op)
{
	switch (op) {
	case '+': return OPR_ADD;
	case '-': return OPR_SUB;
	case '*': return OPR_MUL;
	case '/': return OPR_DIV;
	case '%': return OPR_MOD;
	case '^': return OPR_POW;
	case TK_CONCAT: return OPR_CONCAT;
	case TK_NE: return OPR_NE;
	case TK_EQ: return OPR_EQ;
	case '<': return OPR_LT;
	case TK_LE: return OPR_LE;
	case '>': return OPR_GT;
	case TK_GE: return OPR_GE;
	case TK_AND: return OPR_AND;
	case TK_OR: return OPR_OR;
	default: return OPR_NOBINOPR;
	}
}


static const struct {
	u8 left;  /* left priority for each binary operator */
	u8 right; /* right priority */
} priority[] = {  /* ORDER OPR */
	{6, 6}, {6, 6}, {7, 7}, {7, 7}, {7, 7},  /* `+' `-' `*' `/' `%' */
	{10, 9}, {5, 4},                 /* ^, .. (right associative) */
	{3, 3}, {3, 3}, {3, 3},          /* ==, <, <= */
	{3, 3}, {3, 3}, {3, 3},          /* !=, >, >= */
	{2, 2}, {1, 1}                   /* and, or */
};
